--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark navbar-style">
             <div class="container-fluid">
-                    <img class="logo-image" src="images/logo.png" alt="Logo">
+                    <img class="logo-image" src="images/logo_bianco.png" alt="Logo">
                     <a class="navbar-brand brand" href="#">Photos</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,9 @@
                   <div class="carousel-item">
                     <img src="images/img3.jpg" class="d-block w-100" alt="...">
                   </div>
+                  <div class="carousel-item">
+                    <img src="images/img4.jpg" class="d-block w-100" alt="...">
+                  </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -58,18 +61,16 @@
               </div>
         </section>
         <section class="my-gear">
-            <div class="container-fluid">
-                <img src="apici.png" alt="">
-                <img src="apici.png" alt="">
+            <div class="container-fluid container-apici">
+                <!-- <img class="apici apici-image1" src="images/apici.png" alt="img1"> -->
+                <!-- <img class="apici apici-image2" src="images/apici.png" alt="img2"> -->
                 <h1>My gear</h1>
                 <h2>My camera</h2>
                 <p>Canon 1300d</p>
                 <h2>Lenses</h2>
-                <ul>
-                    <li>50mm f1.8</li>
-                    <li>18-55mm f3.5/5.6</li>
-                    <li>75-300mm f5.6</li>
-                </ul>
+                <p>50mm f1.8</p>
+                <p>18-55mm f3.5/5.6</p>
+                <p>75-300mm f5.6</p>
             </div>
         </section>
       <section class="gallery" id="gallery"></section>
