--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                   <a class="nav-link" aria-current="page" href="#gallery">Gallery</a>
-                  <a class="nav-link" href="#about-me">About Me</a>
+                  <a class="nav-link" href="#about-me">About Meme</a>
                   <a class="nav-link" href="#contacts">Contacts</a>
                 </div>
               </div>
