--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
           </nav>
     </header>
     <main>
-
-eiei
         <section class="random-photos">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/img1.jpg" class="d-block w-100" alt="...">
+                    <img src="images/img1.jpg" class="d-block w-100" alt="pho1">
                   </div>
                   <div class="carousel-item">
                     <img src="images/img2.jpg" class="d-block w-100" alt="...">
